2A/05_Projet_GL/src/test/deca/context/invalid/sans_objet/53_print_bool.deca
// Description :
//     passer boolean à print
// Resultats :
//    Erreur Contexteulle : ligne 10 : le type attendu int , ﬂoat , string
//
// Historique :
// cree le 01/01/2024

{
    print(true);
}